--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vue-input-facade",
-  "version": "1.3.3",
+  "version": "1.3.4-0",
   "description": "A lightweight and dependency free input masking library created specific for Vue",
   "author": "Ronald Jerez <dlanor@gmail.com> (https://github.com/RonaldJerez/)",
   "license": "MIT",
